[package]
name = "sdlrust"
version = "0.1.0"
authors = ["NeedPainkillers <46500324+NeedPainkillers@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at httcaps://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
piston_window = "0.105.0"
image = "0.22.3"
ndarray = { version = "0.13.0", features = ["blas"] }
blas-src = { version = "0.4.0", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.7.0", default-features = false, features = ["cblas", "system"] }
ndarray-linalg = "0.12.0"